fix: banner content maneuver type and modifier
