# src/models/banner_content.rs
@@ -3,7 +3,7 @@
  *
  * Open Source Routing Machine Models
  *
- * The version of the OpenAPI document: 0.0.2
+ * The version of the OpenAPI document: 0.0.3
  * 
  * Generated by: https://openapi-generator.tech
  */
@@ -16,9 +16,9 @@ pub struct BannerContent {
     #[serde(rename = "text")]
     pub text: String,
     #[serde(rename = "type", skip_serializing_if = "Option::is_none")]
-    pub r#type: Option<String>,
+    pub r#type: Option<models::ManeuverType>,
     #[serde(rename = "modifier", skip_serializing_if = "Option::is_none")]
-    pub modifier: Option<String>,
+    pub modifier: Option<models::ManeuverModifier>,
     #[serde(rename = "components", skip_serializing_if = "Option::is_none")]
     pub components: Option<Vec<models::BannerContentComponentsInner>>,
 }
